--- a/src/main/webapp/i18/usermsg_es.properties
+++ b/src/main/webapp/i18/usermsg_es.properties
@@ -6,7 +6,7 @@ logout=Salir
 general_info=Información general
 all_cities=Todas las ciudades
 restaurants=Restaurantes
-hotels=Hotels
+hotels=Hoteles
 no_trips= No has creado ningun viaje aun
 create_trip= Crear nuevo viaje
 title=Titulo
