--- a/src/main/webapp/i18/usermsg_es.properties
+++ b/src/main/webapp/i18/usermsg_es.properties
@@ -14,3 +14,5 @@ start_city= Ciudad de inicio
 end_city= Ciudad de finalizacion
 new_city= Nueva ciudad
 trips= Viajes
+maps=Mapas
+insert_city=Ingrese ciudades:
