--- a/src/main/webapp/i18/usermsg_es.properties
+++ b/src/main/webapp/i18/usermsg_es.properties
@@ -3,7 +3,7 @@ home=Inicio
 new_trip=Nuevo viaje
 suggested=Lugares sugeridos
 logout=Salir
-general_info=Información general
+general_info=InformaciÃ³n general
 all_cities=Todas las ciudades
 restaurants=Restaurantes
 hotels=Hoteles
