--- a/src/main/webapp/i18/usermsg_en.properties
+++ b/src/main/webapp/i18/usermsg_en.properties
@@ -16,3 +16,5 @@ new_city= New city
 trips= Trips
 maps=Maps
 insert_city=Insert cities:
+delete_ok=Trip deleted succesfully
+delete_error=Error deleting the trip
