--- a/src/main/webapp/i18/usermsg_es.properties
+++ b/src/main/webapp/i18/usermsg_es.properties
@@ -16,3 +16,5 @@ new_city= Nueva ciudad
 trips= Viajes
 maps=Mapas
 insert_city=Ingrese ciudades:
+delete_ok=Viaje borrado con éxito
+delete_error=Error al borrar el viaje
